# EE

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  Makefile  ProjectOptions.cmake  README.md
cmake/: AddLibrary.cmake  AddTestSubdirectory.cmake  ClangTidy.cmake  CompilerWarnings.cmake  CppCheck.cmake  Ipo.cmake  Options.cmake  PreventInSourceBuild.cmake  ProjectOptions.cmake  Sanitizers.cmake  Tests.cmake
ee/: CMakeLists.txt
ee/demo/lexer/: CMakeLists.txt
ee/demo/lexer/src/: main.cpp
ee/lib/: CMakeLists.txt
ee/lib/compiler_module/: CMakeLists.txt
ee/lib/compiler_module/include/compiler_module/: Emitter.hpp  Module.hpp  Receiver.hpp  Streamable.hpp
ee/lib/compiler_module/test/: CMakeLists.txt  compile.cpp
ee/lib/compiler_unit/: CMakeLists.txt
ee/lib/compiler_unit/include/compiler_unit/: Emitter.hpp  Receiver.hpp  Streamable.hpp  Unit.hpp
ee/lib/compiler_unit/test/: CMakeLists.txt  test_cmpu_emitter.cpp  test_cmpu_receiver.cpp  test_cmpu_unit.cpp
ee/lib/file/: CMakeLists.txt
ee/lib/file/include/file/: Reader.hpp
ee/lib/file/src/: Reader.cpp
ee/lib/file/test/: CMakeLists.txt  test_reader.cpp
ee/lib/lexer/: CMakeLists.txt
ee/lib/lexer/include/lexer/: Exception.hpp  Lexer.hpp  Token.hpp
ee/lib/lexer/src/: Lexer.cpp  LexerStateMachine.cpp  LexerStateMachine.hpp  LexerStates.cpp  test.cpp
ee/lib/lexer/test/: CMakeLists.txt  test_lexer.cpp
ee/lib/parser/: CMakeLists.txt
ee/lib/parser/include/parser/: Exception.hpp  Scoper.hpp
ee/lib/parser/test/: CMakeLists.txt
ee/lib/stream/: CMakeLists.txt
ee/lib/stream/include/stream/: Stream.hpp  stream.hpp
ee/lib/stream/test/: CMakeLists.txt  test_stream.cpp
ee/lib/tokenizer/: CMakeLists.txt
ee/lib/types/: CMakeLists.txt
ee/lib/types/include/types/: Character.hpp  Token.hpp  Types.hpp
ee/lib/types/src/: Character.cpp  Token.cpp
ee/lib/util/: CMakeLists.txt
ee/lib/util/include/util/: Visitor.hpp
lib/tokenizer/: CMakeLists.txt
lib/tokenizer/src/: hello.cpp
lib/tokenizer/test/: CMakeLists.txt  test_hello.cpp
lib/tokenizer/test/src/: test_hello.cpp
